@@ -57,6 +57,7 @@
                     <source>${jdk.version}</source>
                     <target>${jdk.version}</target>
                     <compilerArgs>
+                        <arg>--add-modules=jdk.incubator.vector</arg>
                         <arg>--add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED</arg>
                         <arg>--add-exports=java.management/sun.management=ALL-UNNAMED</arg>
                         <arg>--enable-preview</arg>
